finished, only certificates window missing

--- a/src/translations/es/about.json
+++ b/src/translations/es/about.json
@@ -9,7 +9,7 @@
 
     },
     "contact":{
-        "message": "O",
+        "message": "O haz",
         "message2": "click aquí",
         "message3": "para escribirme un correo."
     }
